Generate Haiku via Random IP Address()

--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
         <input type="text" name="input" class="form-control" id="lineTwo" placeholder="Line 2"><br>
         <input type="text" name="input" class="form-control" id="lineThree" placeholder="Line 3"><br>
         <button type="submit" class="btn btn-danger" name="button">Check Haiku</button>
+        <button type="button" name="button" class="btn btn-danger" id="newHaiku">Generate Haiku</button>
       </form><br>
-      <div id="result">
+      <div>
         <div class="box">
+          <h3 id="result"></h3>
         </div>
       </div>
     </div>
